hphp/test/zend/good/ext/soap/tests/typemap001.php.skipif
<?php require_once('skipif.inc'); ?>
<?php if (!extension_loaded('simplexml')) die("skip simplexml extension not available"); ?>