hphp/test/zend/bad/ext/standard/tests/filters/stream_filter_remove_error.php.skipif
<?php
$filters = stream_get_filters();
if(! in_array( "string.rot13", $filters )) die( "skip rot13 filter not available." );
?>